--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.0"
+    "version": "3.3.8"
   },
   "dependencies": {
     "hexo": "^3.1.1",
     "hexo-browsersync": "^0.2.0",
+    "hexo-cli": "^1.0.3",
     "hexo-deployer-git": "^0.1.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
