--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@
 # Site
 title: 马小宝
 subtitle: 前端 生活 学习
-description: 马秀丽 马小宝 前端 生活 学习 
+description: 马秀丽 马小宝 前端 生活 学习
 author: MaXiaoBao
 language: en
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://maxiuli.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -47,8 +47,8 @@ highlight:
 default_category: uncategorized
 category_map:
 tag_map:
-    hexo: hexo
-    HTML: HTML
+  hexo: hexo
+  HTML: HTML
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -67,14 +67,14 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: apollo
 archive_generator:
-    per_page: 0
-    yearly: false
-    monthly: false
-    daily: false
+  per_page: 0
+  yearly: false
+  monthly: false
+  daily: false
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
   repository: https://github.com/maxxiaobao/maxxiaobao.github.io.git
-  branch: master
+  branch: gh-pages
