--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,4 @@ branches:
     - dev # build dev branch only
 script:
   - hexo generate # generate static files
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: master
-  local-dir: public
+  - hexo d # deploy
