fix: update travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,28 @@
 sudo: false
 language: node_js
-node_js:
-  - 10 # use nodejs v10 LTS
-cache: npm
+cache:
+  apt: true
+  directories:
+    - node_modules
+node_js: stable
+before_install:
+  - npm install hexo-cli -g
+install:
+  - npm install
+  - npm install hexo-deployer-git --save
+script:
+  - hexo clean
+  - hexo g
+after_script:
+  - cd ./public
+  - git init
+  - git config user.name "maxxiaobao"
+  - git config user.email "maxiuli95@gamil.com"
+  - git add .
+  - git commit -m "travis deploy"
+  - git push --force --quiet "https://${GH_TOKEN}github.com/maxxiaobao/maxxiaobao.github.io.git" master:master
+
+
 branches:
   only:
     - dev # build dev branch only
-script:
-  - hexo generate # generate static files
-  - hexo deploy # deploy
